--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <script src="script-expressions.js"></script>
-    <script src="script-events-adv.js"></script>
+    <!-- <script src="script-events-adv.js"></script> -->
 
 </body>
 
