--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 3 Indoor Ice Rinks</title>
+    <!-- Mapbox Api -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" href="style.css">
+    <!-- Mapbox geocoder plugin -->
+     <script
+        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet"
+        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.css"
+        type="text/css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- CSS -->
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,20 +29,31 @@
     <div class='map-search-container'>
         <label>Search for location</label>
         <div id="geocoder" class="geocoder"></div>
-        <button type="button" class=" btn btn-primary btn-sm" id="returnbutton">Return to full extent</button>
-    </div>
+        <button type="button" class="btn btn-primary btn-sm" id="returnbutton">Return to full extent</button>
+    </div>  
 
+    <div class='map-data-container'>
+        <label>Filter map view</label>
+        <form>
+            <fieldset id="communityfieldset">
+                <label>Select Community</label>
+                <select id="boundary" name="boundary">
+                    <option value="" disabled selected>Select boundary...</option>
+                    <option value="Toronto and East York">Toronto and East York</option>
+                    <option value="North York">North York</option>
+                    <option value="Etobicoke York">Etobicoke York</option>
+                    <option value="Scarborough">Scarborough</option>
+                    <option value="All">Show all</option>
+                </select>
+            </fieldset>
+        </form>
 
-    <!-- Load the mapbox-gl-geocoder plugin. -->
-    <script
-        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.min.js"></script>
-    <link rel="stylesheet"
-        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.css"
-        type="text/css">
-
+    </div> 
 
     <script src="script-expressions.js"></script>
-    <!-- <script src="script-events-adv.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
